package app.client;

import app.client.command.*;
import app.common.enums.ResponseType;
import app.common.exception.ConnectException;
import app.common.protocol.PacketReq;
import app.common.protocol.PacketRes;
import app.common.utils.JsonUtil;
import java.io.*;
import java.net.Socket;
import java.util.EnumMap;
import java.util.Map;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/** Client. */
public class Client {
  private static final Logger logger = LoggerFactory.getLogger(Client.class);
  private static volatile Client instance;
  private static String HOST = "127.0.0.1";
  private static final int PORT = 5000;

  static {
    // Check if external application.properties exists next to jar
    File propFile = new File("application.properties");
    if (propFile.exists()) {
      try (InputStream is = new FileInputStream(propFile)) {
        java.util.Properties props = new java.util.Properties();
        props.load(is);
        String serverHost = props.getProperty("server.host");
        if (serverHost != null && !serverHost.trim().isEmpty()) {
          HOST = serverHost.trim();
          logger.info("[CLIENT] Loaded HOST from external application.properties: {}", HOST);
        }
      } catch (IOException e) {
        logger.warn("[CLIENT] Failed to read external application.properties", e);
      }
    } else {
      // Try to load from classpath
      try (InputStream is = Client.class.getResourceAsStream("/application.properties")) {
        if (is != null) {
          java.util.Properties props = new java.util.Properties();
          props.load(is);
          String serverHost = props.getProperty("server.host");
          if (serverHost != null && !serverHost.trim().isEmpty()) {
            HOST = serverHost.trim();
            logger.info("[CLIENT] Loaded HOST from classpath application.properties: {}", HOST);
          }
        }
      } catch (IOException e) {
        logger.warn("[CLIENT] Failed to read classpath application.properties", e);
      }
    }
  }

  public static String getHost() {
    return HOST;
  }

  public static void setHost(String host) {
    HOST = host;
  }

  private Socket socket;
  private BufferedWriter writer;
  private BufferedReader reader;
  private volatile boolean connected = false;
  private volatile boolean closed = true;
  private boolean paidNoticeRegistered = false;

  private final Map<ResponseType, Command> commands;

  private Client() {
    this.commands = createCommands();
  }

  private Map<ResponseType, Command> createCommands() {
    Map<ResponseType, Command> registry = new EnumMap<>(ResponseType.class);
    registry.put(ResponseType.CHAT_RESULT, new ChatCommand());
    registry.put(ResponseType.LOGIN_RESULT, new LoginCommand());
    registry.put(ResponseType.REGISTER_RESULT, new RegisterCommand());
    registry.put(ResponseType.CREATE_AUCTION_RESULT, new CreateAuctionCommand());
    registry.put(ResponseType.UPDATE_AUCTION_RESULT, new UpdateAuctionCommand());
    registry.put(ResponseType.AUCTION_SUMMARIES_RESULT, new FetchAuctionSummariesCommand());
    registry.put(ResponseType.AUCTION_HISTORY_RESULT, new FetchAuctionHistoryCommand());
    registry.put(ResponseType.AUCTION_RESULT, new FetchAuctionDetailCommand());
    registry.put(ResponseType.AUCTION_RESULT_FETCHED, new FetchAuctionResultCommand());
    registry.put(ResponseType.SELLER_ITEMS_RESULT, new FetchSellerItemsCommand());
    registry.put(ResponseType.USER_LIST_RESULT, new FetchUserListCommand());
    registry.put(ResponseType.CANCEL_AUCTION_RESULT, new CancelAuctionCommand());
    registry.put(ResponseType.PLACE_BID_RESULT, new PlaceBidCommand());
    registry.put(ResponseType.SET_AUTO_BID_RESULT, new SetAutoBidCommand());
    registry.put(ResponseType.DISABLE_AUTO_BID_RESULT, new DisableAutoBidCommand());
    registry.put(ResponseType.DEPOSIT_RESULT, new DepositCommand());
    registry.put(ResponseType.CHAT_MESSAGE, new ChatCommand());
    registry.put(ResponseType.AUCTION_CREATED, new CreateAuctionCommand());
    registry.put(ResponseType.BID_PLACED, new PlaceBidCommand());
    registry.put(ResponseType.AUCTION_CANCELLED, new CancelAuctionCommand());
    registry.put(ResponseType.AUCTION_SUMMARIES_UPDATED, new FetchAuctionSummariesCommand());
    registry.put(ResponseType.AUCTION_DETAIL_UPDATED, new FetchAuctionDetailCommand());
    registry.put(ResponseType.WALLET_UPDATED, new WalletUpdateCommand());
    registry.put(ResponseType.SETTLE_WALLET_RESULT, new WalletUpdateCommand());
    registry.put(ResponseType.AUCTION_PAID_NOTICE, new AuctionPaidNoticeCommand());
    registry.put(ResponseType.UPLOAD_IMAGE, new UploadImageCommand());
    registry.put(ResponseType.FETCH_ITEM_IMAGE, new FetchItemImageCommand());
    registry.put(ResponseType.UPLOAD_AVATAR, new UploadAvatarCommand());
    registry.put(ResponseType.FETCH_AVATAR, new FetchAvatarCommand());
    registry.put(ResponseType.ERROR, new ErrorCommand());
    registry.put(ResponseType.USER_BANNED_NOTICE, new BanUserCommand());
    return registry;
  }

  /** getInstance. */
  public static Client getInstance() {
    if (instance == null) {
      synchronized (Client.class) {
        if (instance == null) {
          instance = new Client();
        }
      }
    }
    return instance;
  }

  /** connect. */
  public synchronized void connect() throws IOException {
    if (connected) {
      return;
    }
    logger.info("[CLIENT] Connecting to server...");
    closed = false;
    socket = new Socket(HOST, PORT);
    socket.setKeepAlive(true);
    socket.setTcpNoDelay(true);
    writer = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream()));
    reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
    connected = true;
    startListener();
    logger.info("[CLIENT] Connected successfully");
  }

  private void startListener() {
    Thread listenerThread = new Thread(this::listen, "client-listener");
    listenerThread.setDaemon(true);
    listenerThread.start();
  }

  private void listen() {
    try {
      while (!closed && connected && socket != null && !socket.isClosed()) {
        String line = reader.readLine();
        if (line == null) {
          logger.warn("[CLIENT] Server disconnected");
          break;
        }
        handleIncoming(line);
      }
    } catch (IOException e) {
      if (!closed) {
        logger.warn("[CLIENT] Socket closed");
      }
    } finally {
      closeResources();
    }
  }

  private void handleIncoming(String line) {
    try {
      PacketRes packet = JsonUtil.fromJson(line, PacketRes.class);
      if (packet == null || packet.getType() == null) {
        logger.error("[CLIENT] Packet type is required");
        return;
      }
      handlePacket(packet);
    } catch (Exception e) {
      logger.error("[CLIENT] Invalid packet received", e);
    }
  }

  private void handlePacket(PacketRes packet) {
    ResponseType type = packet.getType();
    logger.info("Processing packet: {}", type);
    Command command = commands.get(type);
    if (command == null) {
      logger.warn("Unrecognized packet type: {}", type);
      return;
    }
    try {
      command.execute(packet);
    } catch (Exception e) {
      logger.error("Error executing packet: {}", type, e);
    }
  }

  /** sendRequest. */
  public synchronized void sendRequest(PacketReq packet) throws IOException {
    if (!connected || closed || writer == null) {
      throw new ConnectException("Chưa kết nối tới server");
    }
    if (packet == null) {
      throw new IllegalArgumentException("Packet cannot be null");
    }
    String json = JsonUtil.toJson(packet);
    writer.write(json);
    writer.newLine();
    writer.flush();
  }

  /** closeResources. */
  public synchronized void closeResources() {
    if (closed) {
      return;
    }
    logger.info("[CLIENT] Closing resources");
    closed = true;
    connected = false;
    try {
      if (socket != null && !socket.isClosed()) {
        socket.shutdownInput();
        socket.shutdownOutput();
        socket.close();
      }
    } catch (IOException e) {
      logger.warn("[CLIENT] Error closing socket", e);
    }
    try {
      if (reader != null) {
        reader.close();
      }
    } catch (IOException e) {
      logger.warn("[CLIENT] Error closing reader", e);
    }
    try {
      if (writer != null) {
        writer.close();
      }
    } catch (IOException e) {
      logger.warn("[CLIENT] Error closing writer", e);
    }
    socket = null;
    reader = null;
    writer = null;
  }

  public boolean isConnected() {
    return connected;
  }

  public boolean isClosed() {
    return closed;
  }
}
