package app.controllers;

public interface Cleanable {
  void cleanup();
}
