@startuml
' Compact client UML
set namespaceSeparator none
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 22
hide empty members

class "app.client.controllers\nMain controllers" as ControllersA {
  LoginController
  RegisterController
  FirstScene
  LiveController
  AllAuctionController
  AuctionController
  DepositController
}

class "app.client.controllers\nOther controllers" as ControllersB {
  MessController
  MyHistoryController
  SellerDashboardController
  AdminDashboardController
  ConnectServerController
  UserProfileController
}

interface Cleanable

class "app.client.manager\nClientRequestService" as ClientRequestService <<Facade, Singleton>> {
  login/register
  create/update/cancel auction
  fetch auction/detail/history/result
  placeBid / setAutoBid / disableAutoBid
  deposit / settleWallet
  chat
  upload/fetch image/avatar
  fetchUserList / banUser
}

class "app.client\nClient" as Client <<Singleton>> {
  socket : Socket
  commands : Map<ResponseType, Command>
  connect()
  sendRequest(PacketReq)
  handlePacket(PacketRes)
}

abstract class "app.client.command\nCommand" as Command {
  execute(PacketRes)
}

class "app.client.command\nAuth / auction commands" as ClientCommandsA {
  AuctionPaidNoticeCommand
  CancelAuctionCommand
  CreateAuctionCommand
  FetchAuctionDetailCommand
  FetchAuctionHistoryCommand
  FetchAuctionResultCommand
  FetchAuctionSummariesCommand
  LoginCommand
  PlaceBidCommand
  RegisterCommand
  SetAutoBidCommand
  UpdateAuctionCommand
}

class "app.client.command\nUser / media commands" as ClientCommandsB {
  BanUserCommand
  ChatCommand
  DepositCommand
  DisableAutoBidCommand
  ErrorCommand
  FetchAvatarCommand
  FetchItemImageCommand
  FetchSellerItemsCommand
  FetchUserListCommand
  UploadAvatarCommand
  UploadImageCommand
  WalletUpdateCommand
}

class "app.client.store\nStores" as Stores <<Singletons>> {
  AuctionStore
  ItemStore
  BidStore
  LiveAuctionSessionStore
  UserListStore
}

class "app.client.manager\nOther managers" as Managers {
  NavigationManager <<Singleton>>
  UserManager <<Singleton>>
  ClientNotificationCenter <<Observer Hub>>
  AuctionDetailProxy <<Proxy>>
}

class "app.client\nEntry / utils" as ClientSupport {
  App
  Main
  AlertUtils
  LoadingButton
}

ControllersA -[hidden]right- ControllersB
ControllersA -[hidden]down- ClientRequestService
ClientRequestService -[hidden]down- Client
Client -[hidden]down- Command
Command -[hidden]down- ClientCommandsA
ClientCommandsA -[hidden]right- ClientCommandsB
ClientCommandsA -[hidden]down- Stores
Stores -[hidden]down- Managers

ControllersA ..> Cleanable : cleanup capable
ControllersB ..> Cleanable
ControllersA --> ClientRequestService : sends user actions
ControllersB --> ClientRequestService
ControllersA ..> Managers : navigation / state
ControllersB ..> Managers
ClientRequestService --> Client : PacketReq
Client o-- Command : ResponseType registry
ClientCommandsA --|> Command
ClientCommandsB --|> Command
ClientCommandsA --> Stores : update state
ClientCommandsB --> Stores
ClientCommandsA --> Managers : notify/update UI state
ClientCommandsB --> Managers
Managers --> Stores : proxy/cache

@enduml
